// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tally handoff pack > generates exact XML snapshots for the three samples > partial-fifo-sell masters xml 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<ENVELOPE>
  <HEADER>
    <TALLYREQUEST>Import Data</TALLYREQUEST>
  </HEADER>
  <BODY>
    <IMPORTDATA>
      <REQUESTDESC>
        <REPORTNAME>All Masters</REPORTNAME>
        <STATICVARIABLES>
          <SVCURRENTCOMPANY>VERIFY CO</SVCURRENTCOMPANY>
        </STATICVARIABLES>
      </REQUESTDESC>
      <REQUESTDATA>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="STCG" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCG</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCG</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="LTCG" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCG</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCG</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="STCL" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCL</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCL</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="LTCL" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCL</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCL</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="Div on Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Div on Shares</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Div on Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="Speculative Business Income" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Speculative Business Income</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Speculative Business Income</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="INVESTMENT IN SHARES-ZERODHA" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INVESTMENT IN SHARES-ZERODHA</NAME>
            </NAME.LIST>
            <PARENT>Investments</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INVESTMENT IN SHARES-ZERODHA</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="ZERODHA - KITE" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>ZERODHA - KITE</NAME>
            </NAME.LIST>
            <PARENT>Sundry Creditors</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>ZERODHA - KITE</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Bank Account" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Bank Account</NAME>
            </NAME.LIST>
            <PARENT>Bank Accounts</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Bank Account</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="INFY-SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INFY-SH</NAME>
            </NAME.LIST>
            <PARENT>INVESTMENT IN SHARES-ZERODHA</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>Yes</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>Yes</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INFY-SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="STCG ON INFY" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCG ON INFY</NAME>
            </NAME.LIST>
            <PARENT>STCG</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCG ON INFY</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="LTCG ON INFY" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCG ON INFY</NAME>
            </NAME.LIST>
            <PARENT>LTCG</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCG ON INFY</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="STCL ON INFY" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCL ON INFY</NAME>
            </NAME.LIST>
            <PARENT>STCL</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCL ON INFY</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="LTCL ON INFY" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCL ON INFY</NAME>
            </NAME.LIST>
            <PARENT>LTCL</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCL ON INFY</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Intraday Gain on Sale of Shares - ZERODHA" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Intraday Gain on Sale of Shares - ZERODHA</NAME>
            </NAME.LIST>
            <PARENT>Speculative Business Income</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Intraday Gain on Sale of Shares - ZERODHA</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="SHARE BROKERAGE" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>SHARE BROKERAGE</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>SHARE BROKERAGE</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Stt" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Stt</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Stt</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Exchange and Other Charges" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Exchange and Other Charges</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Exchange and Other Charges</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="GST on Brokerage" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>GST on Brokerage</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>GST on Brokerage</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Stamp Duty" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Stamp Duty</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Stamp Duty</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="DP Charges-Zerodha" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>DP Charges-Zerodha</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>DP Charges-Zerodha</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="TDS ON DIVIDEND" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>TDS ON DIVIDEND</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>TDS ON DIVIDEND</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="TDS on Securities" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>TDS on Securities</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>TDS on Securities</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Short Term Capital Gain on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Short Term Capital Gain on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Short Term Capital Gain on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Short Term Capital Loss on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Short Term Capital Loss on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Short Term Capital Loss on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Long Term Capital Gain on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Long Term Capital Gain on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Long Term Capital Gain on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Long Term Capital Loss on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Long Term Capital Loss on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Long Term Capital Loss on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <STOCKITEM NAME="INFY-SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INFY-SH</NAME>
            </NAME.LIST>
            <BASEUNITS>SH</BASEUNITS>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INFY-SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </STOCKITEM>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <UNIT NAME="SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>SH</NAME>
            </NAME.LIST>
            <ISSIMPLEUNIT>Yes</ISSIMPLEUNIT>
            <ORIGINALNAME>SH</ORIGINALNAME>
            <DECIMALPLACES>0</DECIMALPLACES>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </UNIT>
        </TALLYMESSAGE>
      </REQUESTDATA>
    </IMPORTDATA>
  </BODY>
</ENVELOPE>"
`;

exports[`Tally handoff pack > generates exact XML snapshots for the three samples > partial-fifo-sell transactions xml 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<ENVELOPE>
  <HEADER>
    <VERSION>1</VERSION>
    <TALLYREQUEST>Import</TALLYREQUEST>
    <TYPE>Data</TYPE>
    <ID>Vouchers</ID>
  </HEADER>
  <BODY>
    <DESC>
      <STATICVARIABLES>
        <SVCURRENTCOMPANY>VERIFY CO</SVCURRENTCOMPANY>
      </STATICVARIABLES>
    </DESC>
    <DATA>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240401</DATE>
          <EFFECTIVEDATE>20240401</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Purchase of INFY @ 100 × 10 units</NARRATION>
          <VOUCHERNUMBER>CN-SIMPLE-BUY/INFY</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>INFY-SH</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-1001.49</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>10 SH</ACTUALQTY>
              <BILLEDQTY>10 SH</BILLEDQTY>
              <RATE>100.15/SH</RATE>
              <AMOUNT>-1001.49</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>1001.49</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240401</DATE>
          <EFFECTIVEDATE>20240401</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Purchase of INFY @ 100 × 10 units</NARRATION>
          <VOUCHERNUMBER>ORD-1</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>INFY-SH</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-1000.00</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>10 SH</ACTUALQTY>
              <BILLEDQTY>10 SH</BILLEDQTY>
              <RATE>100.00/SH</RATE>
              <AMOUNT>-1000.00</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>1000.00</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Purchase of INFY @ 90 × 5 units</NARRATION>
          <VOUCHERNUMBER>CN-SAME-DAY/INFY</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>INFY-SH</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-451.04</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>5 SH</ACTUALQTY>
              <BILLEDQTY>5 SH</BILLEDQTY>
              <RATE>90.21/SH</RATE>
              <AMOUNT>-451.04</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>451.04</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Purchase of INFY @ 90 × 5 units</NARRATION>
          <VOUCHERNUMBER>ORD-3</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>INFY-SH</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-450.00</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>5 SH</ACTUALQTY>
              <BILLEDQTY>5 SH</BILLEDQTY>
              <RATE>90.00/SH</RATE>
              <AMOUNT>-450.00</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>450.00</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Sale of INFY @ 95 × 5 units</NARRATION>
          <VOUCHERNUMBER>CN-SAME-DAY/INFY</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>ZERODHA - KITE</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-474.55</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>SHARE BROKERAGE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.10</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>Exchange and Other Charges</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.30</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>Exchange and Other Charges</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.01</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>GST on Brokerage</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.04</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>500.75</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>-5 SH</ACTUALQTY>
              <BILLEDQTY>-5 SH</BILLEDQTY>
              <RATE>100.15/SH</RATE>
              <AMOUNT>500.75</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>STCL ON INFY</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-25.75</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Sale of INFY @ 95 × 5 units</NARRATION>
          <VOUCHERNUMBER>ORD-4</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>ZERODHA - KITE</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-475.00</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>500.00</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>-5 SH</ACTUALQTY>
              <BILLEDQTY>-5 SH</BILLEDQTY>
              <RATE>100.00/SH</RATE>
              <AMOUNT>500.00</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>STCL ON INFY</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-25.00</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>STT for period 2024-04-01 to 2024-04-03 — 3 trade(s)</NARRATION>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>Stt</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>Stt</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-1.65</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>1.65</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
    </DATA>
  </BODY>
</ENVELOPE>"
`;

exports[`Tally handoff pack > generates exact XML snapshots for the three samples > same-day-buy-sell masters xml 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<ENVELOPE>
  <HEADER>
    <TALLYREQUEST>Import Data</TALLYREQUEST>
  </HEADER>
  <BODY>
    <IMPORTDATA>
      <REQUESTDESC>
        <REPORTNAME>All Masters</REPORTNAME>
        <STATICVARIABLES>
          <SVCURRENTCOMPANY>VERIFY CO</SVCURRENTCOMPANY>
        </STATICVARIABLES>
      </REQUESTDESC>
      <REQUESTDATA>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="STCG" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCG</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCG</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="LTCG" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCG</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCG</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="STCL" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCL</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCL</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="LTCL" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCL</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCL</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="Div on Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Div on Shares</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Div on Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="Speculative Business Income" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Speculative Business Income</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Speculative Business Income</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="INVESTMENT IN SHARES-ZERODHA" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INVESTMENT IN SHARES-ZERODHA</NAME>
            </NAME.LIST>
            <PARENT>Investments</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INVESTMENT IN SHARES-ZERODHA</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="ZERODHA - KITE" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>ZERODHA - KITE</NAME>
            </NAME.LIST>
            <PARENT>Sundry Creditors</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>ZERODHA - KITE</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Bank Account" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Bank Account</NAME>
            </NAME.LIST>
            <PARENT>Bank Accounts</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Bank Account</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="INFY-SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INFY-SH</NAME>
            </NAME.LIST>
            <PARENT>INVESTMENT IN SHARES-ZERODHA</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>Yes</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>Yes</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INFY-SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="STCG ON INFY" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCG ON INFY</NAME>
            </NAME.LIST>
            <PARENT>STCG</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCG ON INFY</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="LTCG ON INFY" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCG ON INFY</NAME>
            </NAME.LIST>
            <PARENT>LTCG</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCG ON INFY</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="STCL ON INFY" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCL ON INFY</NAME>
            </NAME.LIST>
            <PARENT>STCL</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCL ON INFY</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="LTCL ON INFY" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCL ON INFY</NAME>
            </NAME.LIST>
            <PARENT>LTCL</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCL ON INFY</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Intraday Gain on Sale of Shares - ZERODHA" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Intraday Gain on Sale of Shares - ZERODHA</NAME>
            </NAME.LIST>
            <PARENT>Speculative Business Income</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Intraday Gain on Sale of Shares - ZERODHA</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="SHARE BROKERAGE" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>SHARE BROKERAGE</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>SHARE BROKERAGE</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Stt" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Stt</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Stt</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Exchange and Other Charges" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Exchange and Other Charges</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Exchange and Other Charges</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="GST on Brokerage" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>GST on Brokerage</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>GST on Brokerage</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Stamp Duty" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Stamp Duty</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Stamp Duty</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="DP Charges-Zerodha" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>DP Charges-Zerodha</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>DP Charges-Zerodha</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="TDS ON DIVIDEND" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>TDS ON DIVIDEND</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>TDS ON DIVIDEND</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="TDS on Securities" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>TDS on Securities</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>TDS on Securities</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Short Term Capital Gain on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Short Term Capital Gain on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Short Term Capital Gain on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Short Term Capital Loss on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Short Term Capital Loss on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Short Term Capital Loss on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Long Term Capital Gain on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Long Term Capital Gain on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Long Term Capital Gain on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Long Term Capital Loss on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Long Term Capital Loss on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Long Term Capital Loss on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <STOCKITEM NAME="INFY-SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INFY-SH</NAME>
            </NAME.LIST>
            <BASEUNITS>SH</BASEUNITS>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INFY-SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </STOCKITEM>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <UNIT NAME="SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>SH</NAME>
            </NAME.LIST>
            <ISSIMPLEUNIT>Yes</ISSIMPLEUNIT>
            <ORIGINALNAME>SH</ORIGINALNAME>
            <DECIMALPLACES>0</DECIMALPLACES>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </UNIT>
        </TALLYMESSAGE>
      </REQUESTDATA>
    </IMPORTDATA>
  </BODY>
</ENVELOPE>"
`;

exports[`Tally handoff pack > generates exact XML snapshots for the three samples > same-day-buy-sell transactions xml 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<ENVELOPE>
  <HEADER>
    <VERSION>1</VERSION>
    <TALLYREQUEST>Import</TALLYREQUEST>
    <TYPE>Data</TYPE>
    <ID>Vouchers</ID>
  </HEADER>
  <BODY>
    <DESC>
      <STATICVARIABLES>
        <SVCURRENTCOMPANY>VERIFY CO</SVCURRENTCOMPANY>
      </STATICVARIABLES>
    </DESC>
    <DATA>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Purchase of INFY @ 90 × 5 units</NARRATION>
          <VOUCHERNUMBER>CN-SAME-DAY/INFY</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>INFY-SH</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-451.04</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>5 SH</ACTUALQTY>
              <BILLEDQTY>5 SH</BILLEDQTY>
              <RATE>90.21/SH</RATE>
              <AMOUNT>-451.04</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>451.04</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Purchase of INFY @ 90 × 5 units</NARRATION>
          <VOUCHERNUMBER>ORD-3</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>INFY-SH</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-450.00</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>5 SH</ACTUALQTY>
              <BILLEDQTY>5 SH</BILLEDQTY>
              <RATE>90.00/SH</RATE>
              <AMOUNT>-450.00</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>450.00</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Sale of INFY @ 95 × 5 units</NARRATION>
          <VOUCHERNUMBER>CN-SAME-DAY/INFY</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>ZERODHA - KITE</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-474.55</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>SHARE BROKERAGE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.10</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>Exchange and Other Charges</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.30</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>Exchange and Other Charges</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.01</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>GST on Brokerage</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.04</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>451.04</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>-5 SH</ACTUALQTY>
              <BILLEDQTY>-5 SH</BILLEDQTY>
              <RATE>90.21/SH</RATE>
              <AMOUNT>451.04</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>STCG ON INFY</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>23.96</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Sale of INFY @ 95 × 5 units</NARRATION>
          <VOUCHERNUMBER>ORD-4</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>ZERODHA - KITE</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-475.00</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>450.00</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>-5 SH</ACTUALQTY>
              <BILLEDQTY>-5 SH</BILLEDQTY>
              <RATE>90.00/SH</RATE>
              <AMOUNT>450.00</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>STCG ON INFY</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>25.00</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240403</DATE>
          <EFFECTIVEDATE>20240403</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>STT for period 2024-04-03 to 2024-04-03 — 2 trade(s)</NARRATION>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>Stt</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>Stt</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-0.45</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>0.45</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
    </DATA>
  </BODY>
</ENVELOPE>"
`;

exports[`Tally handoff pack > generates exact XML snapshots for the three samples > simple-buy masters xml 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<ENVELOPE>
  <HEADER>
    <TALLYREQUEST>Import Data</TALLYREQUEST>
  </HEADER>
  <BODY>
    <IMPORTDATA>
      <REQUESTDESC>
        <REPORTNAME>All Masters</REPORTNAME>
        <STATICVARIABLES>
          <SVCURRENTCOMPANY>VERIFY CO</SVCURRENTCOMPANY>
        </STATICVARIABLES>
      </REQUESTDESC>
      <REQUESTDATA>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="STCG" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCG</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCG</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="LTCG" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCG</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCG</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="STCL" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>STCL</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>STCL</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="LTCL" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>LTCL</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>LTCL</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="Div on Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Div on Shares</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Div on Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="Speculative Business Income" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Speculative Business Income</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Speculative Business Income</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <GROUP NAME="INVESTMENT IN SHARES-ZERODHA" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INVESTMENT IN SHARES-ZERODHA</NAME>
            </NAME.LIST>
            <PARENT>Investments</PARENT>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INVESTMENT IN SHARES-ZERODHA</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </GROUP>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="ZERODHA - KITE" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>ZERODHA - KITE</NAME>
            </NAME.LIST>
            <PARENT>Sundry Creditors</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>ZERODHA - KITE</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Bank Account" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Bank Account</NAME>
            </NAME.LIST>
            <PARENT>Bank Accounts</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Bank Account</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="INFY-SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INFY-SH</NAME>
            </NAME.LIST>
            <PARENT>INVESTMENT IN SHARES-ZERODHA</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>Yes</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>Yes</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INFY-SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="SHARE BROKERAGE" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>SHARE BROKERAGE</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>SHARE BROKERAGE</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Stt" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Stt</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Stt</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Exchange and Other Charges" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Exchange and Other Charges</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Exchange and Other Charges</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="GST on Brokerage" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>GST on Brokerage</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>GST on Brokerage</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Stamp Duty" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Stamp Duty</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Stamp Duty</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="DP Charges-Zerodha" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>DP Charges-Zerodha</NAME>
            </NAME.LIST>
            <PARENT>Capital Account</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>DP Charges-Zerodha</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="TDS ON DIVIDEND" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>TDS ON DIVIDEND</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>TDS ON DIVIDEND</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="TDS on Securities" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>TDS on Securities</NAME>
            </NAME.LIST>
            <PARENT>Duties &amp; Taxes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>TDS on Securities</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Short Term Capital Gain on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Short Term Capital Gain on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Short Term Capital Gain on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Short Term Capital Loss on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Short Term Capital Loss on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Short Term Capital Loss on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Long Term Capital Gain on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Long Term Capital Gain on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Incomes</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Long Term Capital Gain on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <LEDGER NAME="Long Term Capital Loss on Sale of Shares" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>Long Term Capital Loss on Sale of Shares</NAME>
            </NAME.LIST>
            <PARENT>Indirect Expenses</PARENT>
            <ISBILLWISEON>No</ISBILLWISEON>
            <ISCOSTCENTRESON>No</ISCOSTCENTRESON>
            <AFFECTSSTOCK>No</AFFECTSSTOCK>
            <ISINVENTORYAFFECTED>No</ISINVENTORYAFFECTED>
            <COUNTRYOFRESIDENCE>India</COUNTRYOFRESIDENCE>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>Long Term Capital Loss on Sale of Shares</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </LEDGER>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <STOCKITEM NAME="INFY-SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>INFY-SH</NAME>
            </NAME.LIST>
            <BASEUNITS>SH</BASEUNITS>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>INFY-SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </STOCKITEM>
        </TALLYMESSAGE>
        <TALLYMESSAGE xmlns:UDF="TallyUDF">
          <UNIT NAME="SH" RESERVEDNAME="" ACTION="Create">
            <NAME.LIST>
              <NAME>SH</NAME>
            </NAME.LIST>
            <ISSIMPLEUNIT>Yes</ISSIMPLEUNIT>
            <ORIGINALNAME>SH</ORIGINALNAME>
            <DECIMALPLACES>0</DECIMALPLACES>
            <LANGUAGENAME.LIST>
              <NAME.LIST TYPE="String">
                <NAME>SH</NAME>
              </NAME.LIST>
              <LANGUAGEID> 1033</LANGUAGEID>
            </LANGUAGENAME.LIST>
          </UNIT>
        </TALLYMESSAGE>
      </REQUESTDATA>
    </IMPORTDATA>
  </BODY>
</ENVELOPE>"
`;

exports[`Tally handoff pack > generates exact XML snapshots for the three samples > simple-buy transactions xml 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<ENVELOPE>
  <HEADER>
    <VERSION>1</VERSION>
    <TALLYREQUEST>Import</TALLYREQUEST>
    <TYPE>Data</TYPE>
    <ID>Vouchers</ID>
  </HEADER>
  <BODY>
    <DESC>
      <STATICVARIABLES>
        <SVCURRENTCOMPANY>VERIFY CO</SVCURRENTCOMPANY>
      </STATICVARIABLES>
    </DESC>
    <DATA>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240401</DATE>
          <EFFECTIVEDATE>20240401</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Purchase of INFY @ 100 × 10 units</NARRATION>
          <VOUCHERNUMBER>CN-SIMPLE-BUY/INFY</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>INFY-SH</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-1001.49</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>10 SH</ACTUALQTY>
              <BILLEDQTY>10 SH</BILLEDQTY>
              <RATE>100.15/SH</RATE>
              <AMOUNT>-1001.49</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>1001.49</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240401</DATE>
          <EFFECTIVEDATE>20240401</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>Purchase of INFY @ 100 × 10 units</NARRATION>
          <VOUCHERNUMBER>ORD-1</VOUCHERNUMBER>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>INFY-SH</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>INFY-SH</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-1000.00</AMOUNT>
            <INVENTORYALLOCATIONS.LIST>
              <STOCKITEMNAME>INFY-SH</STOCKITEMNAME>
              <ACTUALQTY>10 SH</ACTUALQTY>
              <BILLEDQTY>10 SH</BILLEDQTY>
              <RATE>100.00/SH</RATE>
              <AMOUNT>-1000.00</AMOUNT>
            </INVENTORYALLOCATIONS.LIST>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>1000.00</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
      <TALLYMESSAGE xmlns:UDF="TallyUDF">
        <VOUCHER VCHTYPE="Journal" ACTION="Create" OBJVIEW="Accounting Voucher View">
          <DATE>20240401</DATE>
          <EFFECTIVEDATE>20240401</EFFECTIVEDATE>
          <PERSISTEDVIEW>Accounting Voucher View</PERSISTEDVIEW>
          <NARRATION>STT for period 2024-04-01 to 2024-04-01 — 1 trade(s)</NARRATION>
          <VOUCHERTYPENAME>Journal</VOUCHERTYPENAME>
          <PARTYLEDGERNAME>Stt</PARTYLEDGERNAME>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>Stt</LEDGERNAME>
            <ISDEEMEDPOSITIVE>Yes</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>Yes</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>Yes</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>-1.20</AMOUNT>
          </LEDGERENTRIES.LIST>
          <LEDGERENTRIES.LIST>
            <LEDGERNAME>ZERODHA - KITE</LEDGERNAME>
            <ISDEEMEDPOSITIVE>No</ISDEEMEDPOSITIVE>
            <ISLASTDEEMEDPOSITIVE>No</ISLASTDEEMEDPOSITIVE>
            <ISPARTYLEDGER>No</ISPARTYLEDGER>
            <LEDGERFROMITEM>No</LEDGERFROMITEM>
            <REMOVEZEROENTRIES>No</REMOVEZEROENTRIES>
            <AMOUNT>1.20</AMOUNT>
          </LEDGERENTRIES.LIST>
        </VOUCHER>
      </TALLYMESSAGE>
    </DATA>
  </BODY>
</ENVELOPE>"
`;
